Fixed box spacing.

--- a/public/styles.css
+++ b/public/styles.css
@@ -58,6 +58,7 @@ html {
   transform: scale(0.7);
   /* Initialize the boxes to 70% scale */
   opacity: 0.6;
+  margin-bottom: 50px;
   /* Initial opacity */
 }
 
